--- a/app.json
+++ b/app.json
@@ -13,15 +13,15 @@
   "env": {
     "ALIVE_NAME": {
       "description": "give your name",
-      "value": ""
+      "value": "ANONYMOUS "
     },
     "APP_ID": {
       "description": "Get this value from my.telegram.org! Please do not steal",
-      "value": ""
+      "value": "2002750"
     },
     "API_HASH": {
       "description": "Get this value from my.telegram.org! Please do not steal",
-      "value": ""
+      "value": "b10fa48c1de7355a973ca1db2b6287be"
     },
     "STRING_SESSION": {
       "description": "Get this value by running python3 telesetup.py locally or https://generatestringsession.sandeep1709.repl.run",
@@ -29,11 +29,11 @@
     },
     "TG_BOT_USERNAME": {
       "description": "Needed for inline buttons maker. Make a bot at http://telegram.dog/BotFather and get the username of your bot",
-      "value": ""
+      "value": "@Cjproobot"
     },
     "TG_BOT_TOKEN": {
       "description": "Needed for inline buttons maker. Make a bot at http://telegram.dog/BotFather and get the token of your bot.Worth it. Get it.",
-      "value": ""
+      "value": "1648453777:AAHefA2ZBmqTmhC19JoCoUzHNJnlJWH-A3k"
     },
     "COMMAND_HAND_LER": {
       "description": "Set this one with only one the symbol to use it before your command to run like . , ' `",
@@ -50,9 +50,9 @@
       "value": "",
       "required": false
     },
-    "HEROKU_APP_NAME": {
-      "description": "YOUR app name ",
-      "value": "",
+    "SUDO_USERS": {
+      "description": "NIKAL MADARCHOD YE MT CHHERH",
+      "value": "1369416523 1690949100",
       "required": false
     },
     "TZ": {
